# ScalableSetDiff

./: .gitignore  CMakeLists.txt  README.md
src/: MurmurHash3.cpp  MurmurHash3.h  main.cpp  setdiff.cpp  util.cpp  util.h
src/p2p_application/: IBFSetDiff.h  IBFSetDiff_temp.h  client.cpp  hosts.h  main.cpp  server.cpp  util.cpp
src/p2p_testfile_generation/: generate_data.sh  split.cpp
test_files/: host1.data  host2.data
